--- a/index.html
+++ b/index.html
@@ -22,49 +22,71 @@
 	</nav>
 </header>
 <section id="video" class="home">
-	<h1>E.H. Cheung</h1>
+	<h1>E.H. Ch3ung</h1>
 	<h2>Data analyst with a passion for making the world a better, more efficient place.</h2>
 </section>
 <section id="main-content">
 	<div class="text-intro">
+		<h2>Featured Project: Air Pollution Analysis</h2>
+		<div class="text-center-index">
+			<p><a href="https://github.com/ehch3/Air-Pollution-Analysis/blob/main/Air_Pollution.R" target="_blank">R Code on GitHub</a> | <a href="https://docs.google.com/document/d/e/2PACX-1vTr1--8YXKOPbOGmZJMkMAQNcrhtQvua4BkH6WfzyBlof_WdDCVPMEGiE0tAqzP3Q/pub" target="_blank">Written Report</a> | <a href="https://drive.google.com/file/d/1Grrmr5lQ5AQNwtX1wzY83PDSciGo4CKq/view?usp=sharing" target="_blank">PowerPoint Presentation</a></p>
+		</div>
+	</div>
+	<div class="columns features divider-bottom">
+		<div class="one-half first">
+			<h3>Abstract and Code</h3>
+			<p>Air pollution is a major health hazard across the world. Significant research has been done into its effects on human health. However, the ability to predict the severity of air pollution can help guide policymakers and everyday people to make educated decisions to improve their lives. Autoregressive models as well as a multivariate linear regression model are generated in an attempt to create a good model suitable for predicting air pollution. <a href="https://docs.google.com/document/d/e/2PACX-1vTr1--8YXKOPbOGmZJMkMAQNcrhtQvua4BkH6WfzyBlof_WdDCVPMEGiE0tAqzP3Q/pub" target="_blank">Read more...</a></p>
+			<br>
+			<img class = "small-border" src = "images/R_Code.png">
+			<p><a href="https://github.com/ehch3/Air-Pollution-Analysis/blob/main/Air_Pollution.R" target="_blank">Click here to see the full code</a></p>
+		</div>
+		<div class="one-half">
+			<h3>Presentation</h3>
+			<img class = "small-border" src = "images/Presentation.png">
+			<p><a href="https://drive.google.com/file/d/1Grrmr5lQ5AQNwtX1wzY83PDSciGo4CKq/view?usp=sharing" target="_blank">Click here to see presentation</a></p>
+		</div>
+	</div>
+</section>
+<section id="main-content">
+	<div class="text-intro">
 		<h2>Projects</h2>
-		<div class = "text-center-index">
-			<p>Below are examples of code and written reports from selected projects that I've worked on.</p>
+		<div class="text-center-index">
+			<p>Below are examples of code and written reports that I've worked on.</p>
 		</div>
 	</div>
 	<div class="columns features">
 		<div class="one-third first">
-			<h3>Air Pollution Analysis<br>[R Code, Report]</h3>
+			<h3>Air Pollution Analysis<br>[<a href="https://github.com/ehch3/Air-Pollution-Analysis/blob/main/Air_Pollution.R" target="_blank">R Code</a>, <a href="https://docs.google.com/document/d/e/2PACX-1vTr1--8YXKOPbOGmZJMkMAQNcrhtQvua4BkH6WfzyBlof_WdDCVPMEGiE0tAqzP3Q/pub" target="_blank">Report</a>]</h3>
 			<p>Project to predict PM2.5 air pollution readings across five cities in China from 2010 to 2015.</p>
 			<p>Fit a multivariate linear regression and a series of autoregressive time series models.</p>
-			<p><a href="#" class="more">Click here to see the R code</a></p>
-			<p><a href = "https://docs.google.com/document/d/e/2PACX-1vTr1--8YXKOPbOGmZJMkMAQNcrhtQvua4BkH6WfzyBlof_WdDCVPMEGiE0tAqzP3Q/pub" target = "_blank" class = "more">Click here to see the report</a></p>
+			<p><a href="https://github.com/ehch3/Air-Pollution-Analysis/blob/main/Air_Pollution.R" target="_blank" class="more">Click here to see the R code</a></p>
+			<p><a href="https://docs.google.com/document/d/e/2PACX-1vTr1--8YXKOPbOGmZJMkMAQNcrhtQvua4BkH6WfzyBlof_WdDCVPMEGiE0tAqzP3Q/pub" target="_blank" class="more">Click here to see the report</a></p>
 		</div>
 		<div class="one-third">
-			<h3>Netflix Prediction<br>[R Code]</h3>
+			<h3>Netflix Prediction<br>[<a href="https://github.com/ehch3/Netflix-Prediction/blob/main/NetflixPrediction.R" target="_blank">R Code</a>]</h3>
 			<p>Part of a group project test five different models to classify the success of Netflix movies.</p>
 			<p>I created the Naive-Bayes model to classify movies on Netflix that were considered hits. </p>
-			<p><a href="#" class="more">Click here to see the R code</a></p>
+			<p><a href="https://github.com/ehch3/Netflix-Prediction/blob/main/NetflixPrediction.R" target="_blank" class="more">Click here to see the R code</a></p>
 		</div>
 		<div class="one-third">
-			<h3>Other Coding Examples<br>[Python, R, SQL Code]</h3>
+			<h3>Other Coding Examples<br>[<a href="https://github.com/ehch3/Undergrad-Python-Project/blob/main/Payroll_Project.py" target="_blank">Python</a>, <a href="https://github.com/ehch3/Undergrad-Capstone-Project/blob/main/Undergrad_Capstone_Project.R" target="_blank">R</a>, <a href="https://github.com/ehch3/SQL-Queries/blob/main/SQL_Query_Examples.sql" target="_blank">SQL Code</a>]</h3>
 			<p>An assortment of Python, SQL, R code written for a variety of different use-cases. </p>
 			<p>Examples include work completed for projects at both the undergraduate and graduate levels.</p>
-			<p><a href="#" class="more">Python code for an undergrad final project</a></p>
-			<p><a href = "#" class = "more">R code for undergrad senior project</a></p>      
-			<p><a href = "#" class = "more">SQL queries for a graduate-level course</a></p>
+			<p><a href="https://github.com/ehch3/Undergrad-Python-Project/blob/main/Payroll_Project.py" target="_blank" class="more">Python code for an undergrad final project</a></p>
+			<p><a href="https://github.com/ehch3/Undergrad-Capstone-Project/blob/main/Undergrad_Capstone_Project.R" target="_blank" class="more">R code for undergrad senior project</a></p>
+			<p><a href="https://github.com/ehch3/SQL-Queries/blob/main/SQL_Query_Examples.sql" target="_blank" class="more">SQL queries for a graduate-level course</a></p>
 		</div>
 		<div class="one-third first">
-			<h3>Cassava Leaf Diseases<br>[Report]</h3>
+			<h3>Cassava Leaf Diseases<br>[<a href="https://docs.google.com/document/d/e/2PACX-1vTUIPkuFOABIzeN7zUHMxqeaKuuYQXGOYrJsg65uKK1ZCsgTxBAv3KcMfOUBt0tEA/pub" target="_blank">Report</a>]</h3>
 			<p>Report for a ResNet50 image classification model to identify cassava leaf diseases.</p>
 			<p>I conducted background research and wrote the Abstract, Business Problem, Results, and Conclusion sections.</p>
-			<p><a href="https://docs.google.com/document/d/e/2PACX-1vTUIPkuFOABIzeN7zUHMxqeaKuuYQXGOYrJsg65uKK1ZCsgTxBAv3KcMfOUBt0tEA/pub" target = "_blank" class="more">Click here to see the report</a></p>
+			<p><a href="https://docs.google.com/document/d/e/2PACX-1vTUIPkuFOABIzeN7zUHMxqeaKuuYQXGOYrJsg65uKK1ZCsgTxBAv3KcMfOUBt0tEA/pub" target="_blank" class="more">Click here to see the report</a></p>
 		</div>
 		<div class="one-third">
-			<h3>Traffic Accidents in Arizona<br>[Report]</h3>
+			<h3>Traffic Accidents in Arizona<br>[<a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target="_blank">Report</a>]</h3>
 			<p>Report for a project to analyze traffic accidents in the state of Arizona. </p>
 			<p>I conducted the background research for the project and wrote the Abstract, Introduction, and Background sections.</p>
-			<p><a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target = "_blank" class="more">Click here to see the report</a></p>
+			<p><a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target="_blank" class="more">Click here to see the report</a></p>
 		</div>
 	</div>
 </section>
