--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<p><a href="https://docs.google.com/document/d/e/2PACX-1vTUIPkuFOABIzeN7zUHMxqeaKuuYQXGOYrJsg65uKK1ZCsgTxBAv3KcMfOUBt0tEA/pub" target="_blank" class="more">Click here to see the report</a></p>
 		</div>
 		<div class="one-third">
-			<h3>Traffic Accidents in Arizona<br>[<a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target="_blank">Report</a>]</h3>
+			<h3>Arizona Traffic Accidents<br>[<a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target="_blank">Report</a>]</h3>
 			<p>Report for a project to analyze traffic accidents in the state of Arizona. </p>
 			<p>I conducted the background research for the project and wrote the Abstract, Introduction, and Background sections.</p>
 			<p><a href="https://docs.google.com/document/d/e/2PACX-1vSXTWIF7G22K18yozgVeG0X_I5GYo-EgIixdMY3ZwkeinpMVF5d9NA2K1OGSoUscg/pub" target="_blank" class="more">Click here to see the report</a></p>
