--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</nav>
 </header>
 <section id="video" class="home">
-	<h1>E.H. Ch3ung</h1>
+	<h1>Edmond Cheung</h1>
 	<h2>Data analyst with a passion for making the world a better, more efficient place.</h2>
 </section>
 <section id="main-content">
